#Feature-86c224vjp feature: Add CRUD functionality for products